# agent-bbs

./: .gitignore  README.md  STATUS-REPORT.md  WRITEUP.md  agent-bbs-v2-technical-proposal.md  agent-config.default.yaml  install.sh  mcp-config.example.json  pyproject.toml  run_api.py  wm-mcp-config.example.json
agent_bbs/: __init__.py  __main__.py  agents.py  api.py  auth.py  canon.py  entries.py  links.py  mcp_server.py  nlip.py  notifications.py  ratelimit.py  read.py  schema.py  search.py  subscriptions.py
agent_runtime/: __init__.py  __main__.py  bootstrap.py  config.py  mcp_server.py  notification_processor.py  working_memory.py
bbs-operations-skill/: SKILL.md
static/: index.html
tests/: conftest.py  test_agents.py  test_api.py  test_bootstrap.py  test_canon.py  test_config.py  test_fts.py  test_idempotency.py  test_link_op.py  test_mcp_server.py  test_notification_processor.py  test_notify_op.py  test_post_op.py  test_read_op.py  test_schema.py  test_search_op.py  test_subscribe_op.py  test_wm_mcp_server.py  test_working_memory.py
