[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-bbs"
version = "2.0.0a1"
description = "Agent BBS v2 — A Shared Knowledge Substrate for Collaborative AI Agents"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "bcrypt>=4.1",
]

[project.scripts]
agent-bbs-server = "agent_bbs.api:run_server"
agent-bbs-mcp   = "agent_bbs.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
